Fixed styles on mobile

--- a/src/assets/scss/_cart.scss
+++ b/src/assets/scss/_cart.scss
@@ -97,15 +97,27 @@
         width: 100%;
         border: none;
       }
+      @include mq(500px, max) {
+        td {
+          text-align: center;
+          .btn {
+            display: block;
+          }
+          .pull-left, .pull-right {
+            float: none !important;
+          }
+          .checkout-cta {
+            margin-top: 16px;
+          }
+        }
+      }
       td {
-        padding-top: 40px;
+        padding: 40px 0 0;
         vertical-align: middle;
         @include respond-to(extrasmall) {
           display: block;
           width: 100%;
           border: none;
-          padding-top: 8px;
-          text-align: center;
         }
       }
       .checkout-cta {
